# py-compress-compare

./: CODE_OF_CONDUCT.md  README.md  compression_results.json  gen_json.py  py_compress_compare.py  pyproject.toml  sample_data.json
