[project]
name = "py-compress-compare"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dhilipsiva", email = "dhilipsiva@pm.me" }
]
dependencies = [
    "redis>=5.0.4",
    "lz4>=4.3.3",
    "brotli>=1.1.0",
    "zstandard>=0.22.0",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["py_compress_compare"]
